tests/security/taintedInputFromProperty/output.txt
ERROR: TaintedData - input.hack:18:22 - Data from a URL query string found its way to a SQL query